# namadaNFT

./: Cargo.toml  README.md
.cargo/: config.toml
nft_client/: Cargo.toml
nft_client/src/: main.rs  tests.rs
nft_contract/: Cargo.toml
nft_contract/src/: tests.rs
