# nft_contract/Cargo.toml
[package]
name = "nft_contract"
version = "0.1.0"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib"]   # Ensure WASM compatibility

[dependencies]
namada_core = "0.48.0"     # Replace with appropriate version
# namada_storage = "x.y.z"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# ... any other dependencies

[profile.release]
opt-level = "z"           # Optimize for size if needed

