# nft_contract/Cargo.toml
[package]
name = "nft_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]   # Ensure WASM compatibility

[dependencies]
namada_core = "0.48.0"
# namada_storage = "x.y.z"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["macros", "io-util", "rt", "time"] }

[dependencies.getrandom]
version = "0.3.2"
features = ["js"]

[profile.release]
opt-level = "z"           # Optimize for size if needed

