# nft_contract/Cargo.toml
[package]
name = "nft_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]   # Ensure WASM compatibility

[dependencies]
namada_core = "0.48.0"
# namada_storage = "x.y.z"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", default-features = false, features = ["macros", "io-util", "rt", "time"] }
libc = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
ring = { version = "0.17.7", features = ["wasm32_unknown_unknown_js"] }
fd-lock = "4.0.4"

[profile.release]
opt-level = "z"           # Optimize for size if needed

